ChangeLog for Bash-completion
=============================

2008-03-11 Mike Kelly <pioto@exherbo.org>

	* bash-completion-20060301.exheres-0: Use DEFAULT_SRC_PREPARE_PATCHES.
	Fix copyright.

2007-11-02 Mike Kelly <pioto@exherbo.org>

	* +files/bash-completion.sh, -ChangeLog,
	bash-completion-20060301.exheres-0: Fix things up, commit a missing
	file, keyword ~amd64 and ~ia64.
