@@ -1,3 +1,7 @@
+Source: Gentoo
+Upstream: unknown
+Reason: Complete on gkrellm2 as well.
+
 --- bash_completion.orig/contrib/gkrellm	2005-04-20 02:19:05.000000000 -0400
 +++ bash_completion/contrib/gkrellm	2005-04-20 02:19:21.000000000 -0400
 @@ -33,4 +33,4 @@
