@@ -1,3 +1,7 @@
+Source: Gentoo
+Upstream: unknown
+Reason: Some fixes for CVS completion to show everything.
+
 diff --exclude='*~' --exclude='.*' -I '$Id:' -urN bash_completion.orig/bash_completion bash_completion/bash_completion
 --- bash_completion.orig/bash_completion	2005-05-18 23:59:24.000000000 -0400
 +++ bash_completion/bash_completion	2005-05-19 00:00:21.000000000 -0400
