@@ -1,3 +1,7 @@
+Source: Gentoo
+Upstream: unknown
+Reason: Add completion for some other find arguments.
+
 --- bash_completion.orig/bash_completion	2005-04-06 12:19:18.102705608 +0100
 +++ bash_completion/bash_completion	2005-04-06 12:23:24.310276368 +0100
 @@ -925,8 +925,8 @@
