@@ -1,3 +1,8 @@
+Source: Gentoo
+Upstream: unknown
+Reason: End a loop more cleanly in the _command helper (for completing on the
+  command argument to things like sudo).
+
 --- bash_completion.orig/bash_completion	2005-05-04 01:01:21.000000000 -0400
 +++ bash_completion/bash_completion	2005-05-04 01:15:55.000000000 -0400
 @@ -3024,7 +3024,12 @@
