@@ -1,3 +1,7 @@
+Source: Gentoo
+Upstream: unknown
+Reason: Remove the coded list of the filetypes xine supports.
+
 diff --exclude='*~' --exclude='.*' -I '$Id:' -urN bash_completion.orig/bash_completion bash_completion/bash_completion
 --- bash_completion.orig/bash_completion	2006-03-02 07:08:39.000000000 -0500
 +++ bash_completion/bash_completion	2006-03-02 07:09:12.000000000 -0500
