@@ -1,3 +1,7 @@
+Source: Gentoo
+Upstream: unknown
+Reason: Complete on flac files for mplayer.
+
 diff --exclude='*~' --exclude='.*' -I '$Id:' -urN bash_completion.orig/bash_completion bash_completion/bash_completion
 --- bash_completion.orig/bash_completion	2006-03-02 06:55:56.000000000 -0500
 +++ bash_completion/bash_completion	2006-03-02 07:01:47.000000000 -0500
