@@ -1,3 +1,8 @@
+Source: Mike Kelly <pioto@exherbo.org>
+Upstream: no
+Reason: Use make -qp to parse the Makefile for us, so we get proper completion
+  on things like pattern rules.
+
 diff -ur bash_completion-orig/bash_completion bash_completion/bash_completion
 --- bash_completion-orig/bash_completion	2006-03-01 11:20:18.000000000 -0500
 +++ bash_completion/bash_completion	2007-11-01 19:27:33.000000000 -0400
