@@ -1,6 +1,10 @@
 ChangeLog for Bash-completion
 =============================
 
+2008-03-12 Mike Kelly <pioto@exherbo.org>
+
+	* files/20060301/*: Proper patch attribution.
+
 2008-03-11 Mike Kelly <pioto@exherbo.org>
 
 	* bash-completion-20060301.exheres-0: Use DEFAULT_SRC_PREPARE_PATCHES.
